<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_5" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="task200202_02" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ひらがな変換" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SDE-AK-jgX">
                                <rect key="frame" x="155" y="94" width="104" height="20.333333333333329"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="ここに文字を入力してください" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wBz-AD-ggl">
                                <rect key="frame" x="50" y="134.33333333333331" width="314" height="248.33333333333331"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="beforeConvertTextView"/>
                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="eDD-YZ-AjR"/>
                                </connections>
                            </textView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="V3H-Zj-TXb">
                                <rect key="frame" x="128.66666666666666" y="413" width="156.99999999999997" height="80"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hRO-6Z-4M8">
                                        <rect key="frame" x="0.0" y="0.0" width="31" height="80"/>
                                        <accessibility key="accessibilityConfiguration" identifier="deleteTextViewTextButton"/>
                                        <state key="normal" title="削除">
                                            <color key="titleColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="deleteTextViewText" destination="BYZ-38-t0r" eventType="touchUpInside" id="dhM-e1-Z9T"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u2p-O7-ROW">
                                        <rect key="frame" x="126" y="0.0" width="31" height="80"/>
                                        <accessibility key="accessibilityConfiguration" identifier="convertHiraganaButton"/>
                                        <state key="normal" title="変換"/>
                                        <connections>
                                            <action selector="convertHiragana" destination="BYZ-38-t0r" eventType="touchUpInside" id="WTo-Cj-mBx"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="1iC-BO-f4X"/>
                                </constraints>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ここに変換された文字が出力されます" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ltg-Yx-jlR" customClass="CopyUILabel" customModule="task200202_02">
                                <rect key="frame" x="50" y="538" width="314" height="224"/>
                                <accessibility key="accessibilityConfiguration" identifier="convertedTextLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="ltg-Yx-jlR" firstAttribute="top" secondItem="V3H-Zj-TXb" secondAttribute="bottom" constant="45" id="1wo-dI-2CI"/>
                            <constraint firstItem="V3H-Zj-TXb" firstAttribute="top" secondItem="wBz-AD-ggl" secondAttribute="bottom" constant="30.5" id="6ok-VM-oSz"/>
                            <constraint firstItem="SDE-AK-jgX" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="IW8-hm-mq2"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ltg-Yx-jlR" secondAttribute="bottom" constant="100" id="JVv-6O-DdP"/>
                            <constraint firstItem="wBz-AD-ggl" firstAttribute="top" secondItem="SDE-AK-jgX" secondAttribute="bottom" constant="20" id="QQQ-J3-9vg"/>
                            <constraint firstItem="ltg-Yx-jlR" firstAttribute="width" secondItem="wBz-AD-ggl" secondAttribute="width" id="R7x-iz-0YF"/>
                            <constraint firstItem="V3H-Zj-TXb" firstAttribute="width" secondItem="wBz-AD-ggl" secondAttribute="width" multiplier="0.5" id="WWV-lW-Qyz"/>
                            <constraint firstItem="V3H-Zj-TXb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="YnX-Rs-cOm"/>
                            <constraint firstItem="wBz-AD-ggl" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" constant="-100" id="baH-26-gKI"/>
                            <constraint firstItem="ltg-Yx-jlR" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="bts-jN-g2R"/>
                            <constraint firstItem="SDE-AK-jgX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="dCu-6U-cC1"/>
                            <constraint firstItem="V3H-Zj-TXb" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="dZG-nz-Z8k"/>
                            <constraint firstItem="wBz-AD-ggl" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gkZ-v2-hhh"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="convertedTextLabel" destination="ltg-Yx-jlR" id="qGb-0P-UzH"/>
                        <outlet property="textView" destination="wBz-AD-ggl" id="3Pn-tG-zdb"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
        </scene>
    </scenes>
</document>
